<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Portal Berita</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="login_subtitle">Masuk untuk melanjutkan</string>
    <string name="register_title">Daftar</string>
    <string name="register_subtitle">Buat akun baru</string>
    <string name="register_link">Belum punya akun? Daftar</string>
    <string name="login_link">Sudah punya akun? Masuk</string>
    <string name="home">Beranda</string>
    <string name="profile">Profile</string>
    <string name="news_detail">Detail Berita</string>
</resources>
